# template-llm-api

./: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: build-docker.yml  ci-pipeline.yml  format-and-lint.yml  run-tests.yml
src/template_llm_api/: main.py
tests/: test_main.py
