[project]
name = "template-llm-api"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "httpx (>=0.27.0,<0.28.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "uvicorn (>=0.29.0,<0.30.0)",
]

[tool.poetry]
packages = [{include = "template_llm_api", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
