[tool.poetry]
name = "template-llm-api"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "template_llm_api", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.29.0,<0.30.0"
httpx = ">=0.27.0,<0.28.0"
python-dotenv = ">=1.0.1,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
